--- a/home.html
+++ b/home.html
@@ -12,11 +12,11 @@
         <div class="tas-gifs">
             <div class="teo">
                     <img src="images/D2K7Mv8.gif" alt="teo" width="100px" height="100px">
-                    <h2>Teo</h2>
+                    <h2 class="tas-name">Teo</h2>
             </div>
             <div class="juan">
                     <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
-                    <h2>Juan</h2>
+                    <h2 class="tas-name">Juan</h2>
             </div>
 
         </div>
