--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Hotline TA</title>
-  <script type="text/javascript" src="js/background.js"></script>
+  <script type="text/javascript" src="js/world.js"></script>
+  <!--<script type="text/javascript" src="js/background.js"></script>-->
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
@@ -10,6 +11,6 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <canvas id="canvas" width="1000" height="700"></canvas>
+  <canvas id="canvas" width="1100" height="700"></canvas>
 </body>
 </html>
