Add class coin (yo take)

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>Hotline TA</title>
+  <script type="text/javascript" src="js/background.js"></script>
+  <script type="text/javascript" src="js/coins.js"></script>
   <script type="text/javascript" src="js/world.js"></script>
-  <!--<script type="text/javascript" src="js/background.js"></script>-->
   <script type="text/javascript" src="js/obstacles.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
