--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 </head>
 <body>
   <canvas id="canvas" width="1100" height="700"></canvas>
+  <button id="restartGame">Restart Game</button>
 </body>
 </html>
