Changes html, add onclick function, center canvas

--- a/home.html
+++ b/home.html
@@ -10,16 +10,30 @@
         <h1>Hotline TA</h1>
         <h4>Choose your teacher assistant</h4>
         <div class="tas-gifs">
-            <div class="teo">
+            <div class="ta teo">
                     <img src="images/D2K7Mv8.gif" alt="teo" width="100px" height="100px">
                     <h2 class="tas-name">Teo</h2>
             </div>
-            <div class="juan">
+            <div class="ta juan">
+                    <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
+                    <h2 class="tas-name">Juan</h2>
+            </div>
+            <div class="ta diego">
+                    <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
+                    <h2 class="tas-name">Juan</h2>
+            </div>
+            <div class="ta giorgio">
+                    <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
+                    <h2 class="tas-name">Juan</h2>
+            </div>
+            <div class="ta gabriel">
                     <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
                     <h2 class="tas-name">Juan</h2>
             </div>
 
         </div>
+    
     </div>
+    <script type="text/javascript" src="js/home.js"></script>
 </body>
 </html>
