--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <canvas id="canvas" width="1100" height="700"></canvas>
-  <button id="restartGame">Restart Game</button>
+  <div class="container">
+      <canvas id="canvas" width="1100" height="700"></canvas>
+      <button id="restartGame">Restart Game</button>
+  </div>
 </body>
 </html>
