Sprite move, add levels

--- a/home.html
+++ b/home.html
@@ -27,8 +27,8 @@
                     <h2 class="tas-name">Juan</h2>
             </div>
             <div class="ta gabriel">
-                    <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
-                    <h2 class="tas-name">Juan</h2>
+                    <img src="images/gab.png" alt="juan" width="100px" height="100px">
+                    <h2 class="tas-name">Gabriel</h2>
             </div>
 
         </div>
