--- a/index.html
+++ b/index.html
@@ -2,20 +2,38 @@
 <html>
 <head>
   <title>Hotline TA</title>
-  <script type="text/javascript" src="js/background.js"></script>
-  <script type="text/javascript" src="js/coins.js"></script>
-  <script type="text/javascript" src="js/world.js"></script>
-  <script type="text/javascript" src="js/obstacles.js"></script>
-  <script type="text/javascript" src="js/player.js"></script>
-  <script type="text/javascript" src="js/game.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
-
   <link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
-  <div class="container">
-      <canvas id="canvas" width="1100" height="700"></canvas>
-      <button id="restartGame">Restart Game</button>
-  </div>
+    <div class="home-content">
+        <h1>Hotline TA</h1>
+        <h4>Choose your teacher assistant</h4>
+        <div class="tas-gifs">
+            <div class="ta teo">
+                    <img src="images/D2K7Mv8.gif" alt="teo" width="100px" height="100px">
+                    <h2 class="tas-name">Teo</h2>
+            </div>
+            <div class="ta juan">
+                    <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
+                    <h2 class="tas-name">Juan</h2>
+            </div>
+            <div class="ta diego">
+                    <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
+                    <h2 class="tas-name">Juan</h2>
+            </div>
+            <div class="ta giorgio">
+                    <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
+                    <h2 class="tas-name">Juan</h2>
+            </div>
+            <div class="ta gabriel">
+                    <img src="images/gab.png" alt="juan" width="100px" height="100px">
+                    <h2 class="tas-name">Gabriel</h2>
+            </div>
+
+        </div>
+    
+    </div>
+    <script type="text/javascript" src="js/home.js"></script>
 </body>
 </html>
