--- a/home.html
+++ b/home.html
@@ -17,10 +17,8 @@
 <body>
 	<div class="container">
 		<div id="startMessage">
-			<img src="images/D2K7Mv8.gif" alt="teo" width="200px" height="200px">
-			<div></div>
-			<p>Look at that! </p>
-
+			<img class="phone" src="images/Phone.png" alt="teo" width="150px" height="300px">
+			<p>You need to hurry and collect all artifacts</p>
 		</div>
 		<canvas id="canvas" width="1100" height="700"></canvas>
 		<button id="restartGame">Restart Game</button>
