--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
         <h4>Choose your teacher assistant</h4>
         <div class="tas-gifs">
             <div class="ta teo">
-                    <img src="images/D2K7Mv8.gif" alt="teo" width="100px" height="100px">
+                    <img class="imgHover" src="images/D2K7Mv8.gif" alt="teo" width="100px" height="100px">
                     <h2 class="tas-name">Teo</h2>
             </div>
             <div class="ta juan">
-                    <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
+                    <img class="imgHover" src="images/TonyFace.png" alt="juan" width="100px" height="100px">
                     <h2 class="tas-name">Juan</h2>
             </div>
             <div class="ta diego">
-                    <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
+                    <img class="imgHover" src="images/TonyFace.png" alt="juan" width="100px" height="100px">
                     <h2 class="tas-name">Juan</h2>
             </div>
             <div class="ta giorgio">
-                    <img src="images/TonyFace.png" alt="juan" width="100px" height="100px">
+                    <img class="imgHover" src="images/TonyFace.png" alt="juan" width="100px" height="100px">
                     <h2 class="tas-name">Juan</h2>
             </div>
             <div class="ta gabriel">
-                    <img src="images/gab.png" alt="juan" width="100px" height="100px">
+                    <img class="imgHover" src="images/gab.png" alt="juan" width="100px" height="100px">
                     <h2 class="tas-name">Gabriel</h2>
             </div>
 
