style home correction

--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Hotline TA</title>
+	<script type="text/javascript" src="js/sound.js"></script>
 	<script type="text/javascript" src="js/background.js"></script>
 	<script type="text/javascript" src="js/coins.js"></script>
 	<script type="text/javascript" src="js/world.js"></script>
@@ -21,7 +22,7 @@
 			<p>You need to hurry and collect all artifacts</p>
 		</div>
 		<canvas id="canvas" width="1100" height="700"></canvas>
-		<button id="restartGame">Restart Game</button>
+		<button id="restartGame">Start Game</button>
 	</div>
 </body>
 
