index images, level images

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                     <h2 class="tas-name">Juan</h2>
             </div>
             <div class="ta diego">
-                    <img class="imgHover" src="images/TonyFace.png" alt="juan" width="100px" height="100px">
-                    <h2 class="tas-name">Juan</h2>
+                    <img class="imgHover" src="images/diego.gif" alt="juan" width="100px" height="100px">
+                    <h2 class="tas-name">Diego</h2>
             </div>
             <div class="ta giorgio">
-                    <img class="imgHover" src="images/TonyFace.png" alt="juan" width="100px" height="100px">
-                    <h2 class="tas-name">Juan</h2>
+                    <img class="imgHover" src="images/giorgio.png" alt="juan" width="100px" height="100px">
+                    <h2 class="tas-name">Giorgio</h2>
             </div>
             <div class="ta gabriel">
                     <img class="imgHover" src="images/gab.png" alt="juan" width="100px" height="100px">
