add back botton

--- a/home.html
+++ b/home.html
@@ -22,7 +22,8 @@
 			<p>You need to hurry and collect all artifacts</p>
 		</div>
 		<canvas id="canvas" width="1100" height="700"></canvas>
-		<button id="restartGame">Start Game</button>
+		<button id="restartGame" class="restartGame">Start Game</button>
+		 <a href="index.html"><button class="restartGame">Back</button></a>
 	</div>
 </body>
 
